<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_main_question"
        android:layout_width="210dp"
        android:layout_height="65dp"
        android:text="@string/textView_main_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293" />

    <Button
        android:id="@+id/button_main_true"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:text="@string/button_main_true"
        app:layout_constraintBottom_toTopOf="@+id/button_main_false2"
        app:layout_constraintEnd_toStartOf="@+id/button_main_false1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_main_question" />

    <Button
        android:id="@+id/button_main_false1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_main_false1"
        app:layout_constraintBottom_toTopOf="@+id/button_main_false3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_main_true"
        app:layout_constraintTop_toBottomOf="@+id/textView_main_question" />

    <Button
        android:id="@+id/button_main_false3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/button_main_false3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_main_false2"
        app:layout_constraintTop_toBottomOf="@+id/button_main_false1"
        tools:text="Button" />

    <Button
        android:id="@+id/button_main_false2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/button_main_false2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_main_false3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_true" />

    <TextView
        android:id="@+id/textView_main_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textview_main_score"
        app:layout_constraintBottom_toTopOf="@+id/textView_main_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

</android.support.constraint.ConstraintLayout>